# bambu-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bambu_mcp/: __init__.py  server.py
src/bambu_mcp/tools/: mesh.py
tests/: test_mesh.py
